Main program selected

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
     <textarea id="printout"></textarea>
 
-    <!-- <script src="dragonCurveLogic.js"></script> -->
-    <script src="dragonCurveArt.js"></script>
+    <script src="dragonCurveLogic.js"></script>
+    <!-- <script src="dragonCurveArt.js"></script> -->
     
 </body>
 </html>
