--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </ol>
     </div>
 
-    <textarea id="printout"></textarea>
+    <!-- <textarea id="printout"></textarea> -->
 
     <script src="dragonCurveLogic.js"></script>
     <!-- <script src="dragonCurveArt.js"></script> -->
