--- a/index.html
+++ b/index.html
@@ -300,6 +300,28 @@
             <strong>Jurassic Park</strong> and its <strong>dinosaurs</strong> seem simple and foolproof to the park's designers,
             but lead to <strong>unpredictable, catastrophic</strong> results.
         </p>
+
+        <p>The <b>Dragon Curve</b> was programmed using Vanilla JS and the HTML5 Canvas element.</p>
+
+        <h3>AS HOME DECOR</h3>
+
+        <p>One unusual property of the <strong>Dragon Curve</strong> is that <strong>never overlaps itself</strong>.
+        This means that a <strong>Dragon Curve</strong> can be used to <strong>tile a surface</strong>.
+        </p>
+
+        <p>By creating <strong>four Dragon Curves of different colors</strong>, each rotated 90&deg; from the previous one,
+        I can create a <strong>Dragon Curve grid</strong>.
+        </p>
+
+        <p>I then used <strong>Legos&trade;</strong> to <strong>tile my coffee table</strong> with a 
+        <strong>Dragon Curve pattern.</strong></p>
+
+        <p>Using a modified version of my program, a <strong>Dragon Curve</strong> tile can be made for any size surface.</p>
+
+        <h3>CREDITS</h3>
+        <ul>
+            <li><strong>Dragon Curve program created by Nicholas Bernhard</strong></li>
+        </ul>
     </div>
 
     <!-- <textarea id="printout"></textarea> -->
