Wrapped coffee table photos in links, other styling improvements

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             width: 100%;
             flex-direction: row;
             flex-wrap: wrap;
-            justify-content: space-around;
+            justify-content: space-evenly;
             align-items: center;
         }
 
@@ -122,9 +122,13 @@
                 width: 20%;
             }
 
-            img.coffeeTable {
+            a {
                 width: 33%;
                 margin-bottom: 10px;
+            }
+
+            a img {
+                width: 100%;
             }
 
             figure img {
@@ -155,7 +159,8 @@
                 width: 100%;
             }
 
-            img#jurassicParkPhoto, img.coffeeTable {
+            img#jurassicParkPhoto,
+            img.coffeeTable {
                 display: block;
                 width: 90%;
                 margin-left: auto;
@@ -186,8 +191,8 @@
                 width: 35%;
             }
 
-            
-            img#jurassicParkPhoto, img.coffeeTable {
+            img#jurassicParkPhoto,
+            img.coffeeTable {
                 display: block;
                 width: 66%;
                 margin-left: auto;
@@ -318,7 +323,8 @@
         </p>
         <p>
             In the same way, the rules governing
-            <strong>Jurassic Park</strong> and its <strong>dinosaurs</strong> seem simple and foolproof to the park's designers,
+            <strong>Jurassic Park</strong> and its <strong>dinosaurs</strong> seem simple and foolproof to the park's
+            designers,
             but lead to <strong>unpredictable, catastrophic</strong> results.
         </p>
 
@@ -327,29 +333,43 @@
         <h3>AS HOME DECOR</h3>
 
         <p>One unusual property of the <strong>Dragon Curve</strong> is that <strong>never overlaps itself</strong>.
-        This means that a <strong>Dragon Curve</strong> can be used to <strong>tile a surface</strong>.
+            This means that a <strong>Dragon Curve</strong> can be used to <strong>tile a surface</strong>.
         </p>
 
-        <p>By creating <strong>four Dragon Curves of different colors</strong>, each rotated 90&deg; from the previous one,
-        I can create a <strong>Dragon Curve grid</strong>.
+        <p>By creating <strong>four Dragon Curves of different colors</strong>, each rotated 90&deg; from the previous
+            one,
+            I can create a <strong>Dragon Curve grid</strong>.
         </p>
 
-        <p>I then used <strong>Legos&trade;</strong> to <strong>tile my coffee table</strong> with a 
-        <strong>Dragon Curve pattern.</strong></p>
+        <p>I then used <strong>Legos&trade;</strong> to <strong>tile my coffee table</strong> with a
+            <strong>Dragon Curve pattern.</strong></p>
 
         <div class="illustrationDiv">
-            <img class="coffeeTable" src="illustrations/illustration-11.jpg" />
-            <img class="coffeeTable" src="illustrations/illustration-12.jpg" />
-            <img class="coffeeTable" src="illustrations/illustration-13.jpg" />
-            <img class="coffeeTable" src="illustrations/illustration-14.jpg" />
-            <img class="coffeeTable" src="illustrations/illustration-15.jpg" />
+            <a href="illustrations/illustration-11.jpg">
+                <img class="coffeeTable" src="illustrations/illustration-11.jpg" />
+            </a>
+            <a href="illustrations/illustration-11.jpg">
+                <img class="coffeeTable" src="illustrations/illustration-12.jpg" />
+            </a>
+            <a href="illustrations/illustration-11.jpg">
+                <img class="coffeeTable" src="illustrations/illustration-13.jpg" />
+            </a>
+            <a href="illustrations/illustration-11.jpg">
+                <img class="coffeeTable" src="illustrations/illustration-14.jpg" />
+            </a>
+            <a href="illustrations/illustration-11.jpg">
+                <img class="coffeeTable" src="illustrations/illustration-15.jpg" />
+            </a>
         </div>
 
-        <p>Using a modified version of my program, a <strong>Dragon Curve</strong> tile can be made for any size surface.</p>
+        <p style="text-align: center;"><b>Click on photos to enlarge.</b></p>
+
+        <p>Using a modified version of my program, a <strong>Dragon Curve</strong> tile can be made for any size
+            surface.</p>
 
         <h3>CREDITS</h3>
         <ul>
-            <li><strong>Dragon Curve program created by Nicholas Bernhard</strong></li>
+            <li><strong>Dragon Curve Drawing Function created by Nicholas Bernhard</strong></li>
         </ul>
     </div>
 
