minor formatting changes

--- a/index.html
+++ b/index.html
@@ -297,9 +297,7 @@
                 </div>
             </li>
             <li>The first iteration had just <strong>two lines</strong>, but the eighteenth iteration has over a
-                <strong>quarter-million lines</strong>.
-                <br />
-                Seen from a distance, <strong>individual lines</strong> blend together into a <strong>solid
+                <strong>quarter-million lines</strong>. Seen from a distance, individual lines blend together into a <strong>solid
                     color</strong>.
                 <div class="illustrationDiv">
                     <img class="illustration" width="200" height="200" src="illustrations/illustration-09.gif" />
