--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
             <canvas id="dragonCurveCanvas" width="1000" height="1000"></canvas>
             <!-- <canvas id="dragonCurveCanvas" width="1390" height="620"></canvas> -->
             <!-- <canvas id="dragonCurveCanvas" width="13900" height="6200"></canvas> -->
+            <!-- <canvas id="dragonCurveCanvas" width="3200" height="2400"></canvas> -->
+            <!-- <canvas id="dragonCurveCanvas" width="24000" height="11000"></canvas> -->
         </div>
         <div id="optionsDiv">
             <select id="iterationSelect">
